<resources>
    <string name="app_name">My Cv</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_item_profile">Profile</string>
    <string name="nav_item_work_experience">Work Experience</string>
    <string name="nav_item_education">Education </string>
    <string name="retry">Retry</string>
    <string name="upps_something_went_wrong">Upps!! Something went wrong.</string>
    <string name="work_experience">Work Experience (Click for more)</string>
    <string name="education">Education (Click for more)</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">phone number</string>
    <string name="textview">TextView</string>
    <string name="user_image">User image</string>
    <string name="loading">Loading ...</string>
    <string name="summary">Summary of the user</string>
</resources>
