<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.profile.ProfileActivity">

    <Button
            android:text="@string/work_experience"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_work"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView_summary"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/button_education"/>
    <Button
            android:text="@string/education"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/button_education"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_work" android:layout_marginBottom="131dp"/>
    <TextView
            android:text="@string/name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_name"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView_email"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView_name" android:layout_marginBottom="9dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_phone"/>
    <TextView
            android:text="@string/phone_number"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/textView_email" android:layout_marginBottom="13dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_summary"/>
    <TextView
            android:text="@string/textview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/textView_summary" tools:text="@tools:sample/lorem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp" android:gravity="center" android:scrollbars="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView_phone" android:layout_marginBottom="23dp"
            app:layout_constraintBottom_toTopOf="@+id/button_work"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="0dp" tools:srcCompat="@tools:sample/avatars[0]"
            android:id="@+id/imageView2"
            android:contentDescription="@string/user_image"
            android:layout_marginTop="68dp" android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/textView_name"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>