<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
>
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
    >

        <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:elevation="12dp"
                android:layout_gravity="center"
                app:cardCornerRadius="50dp"
                android:layout_margin="8dp"
        >
            <ImageView
                    android:layout_height="120dp"
                    android:layout_width="match_parent"
                    android:id="@+id/imageView"
                    android:src="@drawable/avatar"
                    android:scaleType="centerCrop"

            />
        </androidx.cardview.widget.CardView>

        <TextView
                android:text="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_name"
                android:gravity="center"
        />
        <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_email"
                android:gravity="center"
        />
        <TextView
                android:text="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_phone"
                android:gravity="center"
        />

        <TextView
                android:text="@string/summary"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/textView_summary"
                android:gravity="center"
        />
    </LinearLayout>
</androidx.cardview.widget.CardView>